<resources>
    <string name="app_name">GankIO</string>
    <string name="drawer_layout_name">Category</string>
    <string name="category_android">Android</string>
    <string name="category_ios">iOS</string>
    <string name="category_web_front">Web Front</string>
    <string name="category_app">App</string>
    <string name="drawer_open">Drawer is opened</string>
    <string name="drawer_close">Drawer is closed</string>
    <string name="search">Search</string>
    <string name="clear_search_history">Clear Queries</string>
    <string name="search_hint">Search interesting Articles</string>
    <string name="about">About</string>
    <string name="suggestion_provider">com.example.xkwei.gankio.contents.SearchSuggestionProvider</string>
    <string name="no_connectivity">Cannot connect to the Internet</string>
    <string name="title_resource_announcement">Resources</string>
    <string name="gankio_resource_announcement">All the data come from\nhttp://gank.io</string>
    <string name="icons8_resource_announcement">Some icons belong to\nhttps://www.icons8.com</string>
    <string name="title_project_description">Project</string>
    <string name="author">Author WEI, Xikai</string>
    <string name="project_link">Project link \nhttps://github.com/ShiKaiWi/GankIO</string>
</resources>
