<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/navigation_menu_android"
              android:icon="@drawable/android"
              android:title="@string/category_android"/>

        <item android:id="@+id/navigation_menu_ios"
              android:icon="@drawable/apple"
              android:title="@string/category_ios"/>

        <item android:id="@+id/navigation_menu_web_front"
              android:icon="@drawable/js"
              android:title="@string/category_web_front"/>

        <item android:id="@+id/navigation_menu_app"
              android:icon="@drawable/application"
              android:title="@string/category_app"/>

        <item android:id="@+id/navigation_menu_collection"
              android:icon="@drawable/like_filled"
              android:title="Collection"/>
    </group>
</menu>