<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/about_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/AboutTitle"
                android:text="@string/title_resource_announcement"/>

            <include layout="@layout/divider_layout"/>

            <TextView
                style="@style/AboutText"
                android:text="@string/gankio_resource_announcement"/>

            <TextView
                style="@style/AboutText"
                android:text="@string/icons8_resource_announcement"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
        <TextView
            style="@style/AboutTitle"
            android:text="@string/title_project_description"/>
        <include layout="@layout/divider_layout"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <TextView
            style="@style/AboutText"
            android:text="@string/author"/>
        <TextView
            style="@style/AboutText"
            android:text="@string/project_link"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>